--- a/src/assets/styles/_flex.scss
+++ b/src/assets/styles/_flex.scss
@@ -22,3 +22,9 @@
 .align-items-center{
     align-items: center;
 }
+.flex-wrap{
+    flex-wrap: wrap;
+}
+.flex-no-wrap{
+    flex-wrap: nowrap;
+}
