--- a/src/Components/Header/Header.module.scss
+++ b/src/Components/Header/Header.module.scss
@@ -1,10 +1,16 @@
 .header{
-    padding: 10px 20px;
+    padding: 0px 20px;
     box-shadow: var(--box-shadow-nav);
     background-color: white;
+    height: 58px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 100;
     .logoContainer{
-        width: 60px;
-        height: 60px;
+        width: 50px;
+        height: 50px;
     }
     img{
         width: 100%;
