--- a/src/assets/styles/_utiles.scss
+++ b/src/assets/styles/_utiles.scss
@@ -22,6 +22,12 @@
 .mb-20 {
     margin-bottom: 20px;
 }
+.mb-30 {
+    margin-bottom: 30px;
+}
+.mb-40 {
+    margin-bottom: 40px;
+}
 .mr-5 {
     margin-right: 5px;
 }
@@ -45,6 +51,24 @@
 }
 .mt-20 {
     margin-top: 20px;
+}
+.mt-30 {
+    margin-top: 30px;
+}
+.mt-40 {
+    margin-top: 40px;
+}
+.mt-50 {
+    margin-top: 50px;
+}
+.mt-60 {
+    margin-top: 60px;
+}
+.mt-70 {
+    margin-top: 70px;
+}
+.mt-80 {
+    margin-top: 80px;
 }
 .container{
     max-width: 1200px;
