fetch de la data, pagination , filter

--- a/src/Components/SearchBar/SearchBar.module.scss
+++ b/src/Components/SearchBar/SearchBar.module.scss
@@ -23,9 +23,7 @@
         background-color: var(--color-primary);
         color: white;
         font-weight: bolder;
-        &:hover{
-            background-color: var(--color-gray-1);
-        }
+        cursor:none;
     }
     .searchInput{
         width: 100%;
