--- a/src/Pages/HomePage/components/Content/Content.module.scss
+++ b/src/Pages/HomePage/components/Content/Content.module.scss
@@ -1,4 +1,4 @@
-@use '../../assets/styles/mixins' as mixin;
+@use '../../../../assets/styles/mixins' as mixin;
 
 
 h1{
@@ -29,3 +29,17 @@ h1{
     width: 100%;
     margin: auto;
 }
+.btnMoreLoad{
+        padding: 10px 20px;
+        border: none;
+        background-color: var(--color-primary);
+        color: white;
+        font-size: 1rem;
+        font-weight: 600;
+        border-radius: 15px;
+        cursor: pointer;
+        &:hover{
+            background-color: var(--color-gray-1);
+        }
+    }
+
