--- a/src/assets/styles/_utiles.scss
+++ b/src/assets/styles/_utiles.scss
@@ -10,6 +10,9 @@
 .p-5 {
     padding: 5px;
 }
+.m-a {
+    margin: auto;
+}
 .m-5 {
     margin: 5px;
 }
@@ -69,6 +72,9 @@
 }
 .mt-80 {
     margin-top: 80px;
+}
+.mt-100 {
+    margin-top: 100px;
 }
 .container{
     max-width: 1200px;
