--- a/src/Pages/HomePage/components/Recipe/Recipe.module.scss
+++ b/src/Pages/HomePage/components/Recipe/Recipe.module.scss
@@ -17,9 +17,44 @@
    border-top-left-radius: 20px ;
    border-top-right-radius: 20px ;
    overflow: hidden;
+   position: relative;
    img{
     width: 100%;
     height: 100%;
     object-fit: cover;
    }
+}
+.deleteBtn{
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: var(--color-primary);
+  color: white;
+  border: none;
+  border-radius: 10px;
+  padding: 3px;
+  width: 40px;
+  height: 30px;
+  cursor: pointer;
+  &:hover{
+    background-color: var(--color-gray-1);
+    transition: 0.5s;
+  }
+}
+.addBookMark{
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  background-color: var(--color-primary);
+  color: white;
+  border: none;
+  border-radius: 10px;
+  padding: 3px;
+  width: 40px;
+  height: 30px;
+  cursor: pointer;
+  &:hover{
+    background-color: var(--color-gray-1);
+    transition: 0.5s;
+  }
 }
