add register, connexion, recipe detail and update homepage with api

--- a/src/assets/styles/_base.scss
+++ b/src/assets/styles/_base.scss
@@ -2,7 +2,7 @@ body{
     margin: 0;
     font-family: var(--font-family-primary);
     color: var(--text-color);
-    background-color: var(--color-gray-2);
+    background-color: #fffdfd;
 }
 h1, h2, h3, h4, h5, h6{
     font-family: var(--font-family-secondary);
