--- a/src/assets/styles/_flex.scss
+++ b/src/assets/styles/_flex.scss
@@ -22,6 +22,9 @@
 .align-items-center{
     align-items: center;
 }
+.align-items-end{
+    align-items: self-end;
+}
 .flex-wrap{
     flex-wrap: wrap;
 }
@@ -33,4 +36,10 @@
 }
 .gap-10{
     gap: 10px;
+}
+.gap-15{
+    gap: 15px;
+}
+.gap-20{
+    gap: 20px;
 }
