--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -4,8 +4,9 @@
     --color-gray-2: #f1ecec;
     --font-family-primary: 'Montserrat', sans-serif;
     --font-family-secondary: 'Raleway', sans-serif;
+    --font-family-tertiary: 'Dancing Script', cursive;
     --box-shadow: 0 6px 9px 0 rgb(0 0 0 / 15%);
-    --box-shadow-nav: 0px 2px 18px 0px rgb(0 0 0 / 22%);
+    --box-shadow-nav: 0px 2px 18px 0px rgb(0 0 0 / 10%);
     --text-color:#1f1d1da1;
     --text-color-red: rgb(200, 44, 44);
 
