--- a/src/Pages/AddRecipe/AddRecipe.module.scss
+++ b/src/Pages/AddRecipe/AddRecipe.module.scss
@@ -79,3 +79,10 @@
         font-style: italic;
         font-size: 12px;
     }
+    .defaultOption{
+        color: #999;
+        font-weight: 200;
+        font-style: italic;
+        font-size: 12px;
+    }
+   
