--- a/src/Components/Header/Header.module.scss
+++ b/src/Components/Header/Header.module.scss
@@ -33,3 +33,22 @@
         }
     }
 }
+.countBookmarks{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 10;
+    background: var(--color-primary);
+    color: white;
+    padding: 0 5px;
+    border-radius: 50%;
+    font-size: 12px;
+    font-weight: 600;
+    line-height: 1;
+    height: 20px;
+    width: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 5px;
+}
