--- a/src/Pages/HomePage/components/Content/Content.module.scss
+++ b/src/Pages/HomePage/components/Content/Content.module.scss
@@ -27,7 +27,7 @@ h1{
 .contentCard{
     max-width: 1130px;
     width: 100%;
-    margin: auto;
+    margin: 20px auto;
 }
 .btnMoreLoad{
         padding: 10px 20px;
